# BreakOut

./: BreakOut.qrc  CMakeLists.txt  README.md  build_vs2017_64_project.bat
res/levels/: level_1.lvl
res/shaders/: particle.frag  particle.vert  post_processor.frag  post_processor.vert  shader.frag  shader.vert  sprite.frag  sprite.vert  text.frag  text.vert
src/: main.cc  mainwindow.cc  mainwindow.h
src/HomePage/: collision_helper.cc  collision_helper.h  game_gl_widget - 副本.cc  game_gl_widget - 副本.h  game_gl_widget.cc  game_gl_widget.h  game_level.cc  game_level.h  game_object.cc  game_object.h  game_state.cc  game_state.h  homepage.cc  homepage.h  particle_generator.cc  particle_generator.h  post_processor.cc  post_processor.h  power_up.cc  power_up.h  power_up_manager.cc  power_up_manager.h  sprite_renderer.cc  sprite_renderer.h
src/common/: audio_manager.cc  audio_manager.h  resource_manager.cc  resource_manager.h  shader.cc  shader.h  text_renderer.cc  text_renderer.h
